feat(INTEROP-25): support pull model in aggregate report transfer (documentation to follow) (#64)
create reminder broadcast payload with DataSonnet instead of Java

rename classes